Fix error page and custom scrollbar 🤤

--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -3,7 +3,6 @@
   overflow: auto;
   margin-bottom: 3rem;
   user-select: text;
-  cursor: text;
 }
 
 .icons {
@@ -19,4 +18,20 @@
     height: 40rem !important;
     margin: 1.5rem;
   }
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #c8c6c4;
+  border: 6px solid transparent;
+  border-radius: 8px;
+  background-clip: padding-box; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #ffffff;
+  border: 5px solid transparent;
+}
+
+::-webkit-scrollbar {
+  width: 16px;
 }
